[package]
name = "bevy_health_system"
description = "A quick and easy way to add a health system to any entity of your bevy game"
version = "0.0.1"
repository = "https://github.com/thaiminh2022/bevy_health_system"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = ["gamedev", "bevy", "heath_system"]
categories = ["bevy", "game"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
